--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,28 @@ authors = ["anagilrod <anagilabertrodriguez93@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.11,<3.13"
-pandas = "^2.1.2"
+python = ">=3.11,<3.12"
+pandas = ">=1.3.0,<2.0.0"
 black = "^23.10.1"
 ruff = "^0.1.3"
 mypy = "^1.6.1"
 pycln = "^2.3.0"
 isort = "^5.12.0"
 typed-ast = "^1.5.5"
+ipykernel = "^6.26.0"
+matplotlib = "^3.8.1"
+seaborn = "^0.13.0"
+sweetviz = "^2.2.1"
+scikit-learn = ">=1.0,<1.3.0"
+lightgbm = "^4.1.0"
+xgboost = "^2.0.1"
+numpy = ">=1.21,<1.24"
+tpot = "^0.12.1"
+joblib = "^1.3.2"
+pip = "^23.3.1"
+install = "^1.3.5"
+fastapi = "^0.104.1"
+uvicorn = "^0.24.0.post1"
 
 
 [build-system]
